Add some unit tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
         "stdexcept": "cpp",
         "cwctype": "cpp",
         "typeinfo": "cpp",
-        "stdarg.h": "c"
+        "stdarg.h": "c",
+        "klee.h": "c"
     }
 }
