feat(solver): Add CVC5 Solver Support
Added full support for the CVC5 solver, including:

1. Added CVC5_SOLVER enum type in SolverCmdLine.h.
2. Implemented CVC5Solver class and related CMake configuration.
3. Added extensive floating-point operation test cases.
4. Updated test configuration to support CVC5.
Added necessary header and implementation files.
5. Test cases cover basic floating-point operations, type conversions, special value handling, and various mathematical functions. Also added a dedicated CVC5 test directory and configuration file.

Modified existing floating-point test files to include necessary header files and platform requirement markers. Updated VS Code configuration to support new C++ header files.

This commit adds CVC5 solver backend support to KLEE, enabling symbolic execution with CVC5.

--- a/lib/Solver/CMakeLists.txt
+++ b/lib/Solver/CMakeLists.txt
@@ -33,6 +33,8 @@ add_library(kleaverSolver
   Z3CoreBuilder.cpp
   Z3HashConfig.cpp
   Z3Solver.cpp
+  CVC5Builder.cpp
+  CVC5Solver.cpp
 )
 
 llvm_config(kleaverSolver "${USE_LLVM_SHARED}" support)
