--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,25 @@
         "cwctype": "cpp",
         "typeinfo": "cpp",
         "stdarg.h": "c",
-        "klee.h": "c"
+        "klee.h": "c",
+        "regex": "cpp",
+        "cstdarg": "cpp",
+        "ctime": "cpp",
+        "chrono": "cpp",
+        "deque": "cpp",
+        "iostream": "cpp",
+        "streambuf": "cpp",
+        "bitset": "cpp",
+        "cinttypes": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "complex": "cpp",
+        "any": "cpp",
+        "csignal": "cpp",
+        "condition_variable": "cpp"
     }
 }
