--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -201,6 +201,10 @@ if config.enable_z3:
   config.available_features.add('z3')
 else:
   config.available_features.add('not-z3')
+if config.enable_cvc5:
+  config.available_features.add('cvc5')
+else:
+  config.available_features.add('not-cvc5')
 
 # Zlib
 config.available_features.add('zlib' if config.enable_zlib else 'not-zlib')
